# warframe-profile

./: .gitignore  README.md  pyproject.toml  warframe.py
warframe_profile/: __init__.py  __main__.py
warframe_profile/model/: __init__.py  analysis.py  craft_model.py  inventory.py  utils.py
warframe_profile/presenter/: __init__.py  cli.py  craft_tree.py  inventory_cleanup.py  mastery.py  web_server.py
warframe_profile/scripts/: __init__.py  update_export_db.py
warframe_profile/view/: __init__.py  report.py
warframe_profile/view/web/: __init__.py  templates.py
