[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-profile"
version = "1.0"
description = "Warframe prime part inventory analyzer"
requires-python = ">=3.10"
dependencies = ["prettytable"]

[tool.setuptools]
packages = ["warframe_profile", "warframe_profile.scripts"]
