[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-profile"
version = "1.0"
description = "Warframe prime part inventory analyzer"
requires-python = ">=3.10"
dependencies = ["prettytable"]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools]
packages = ["warframe_profile", "warframe_profile.scripts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]
ignore = ["N818"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
